@@ -65,7 +65,7 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 #com.mchange.level=ALL
 #com.mchange.v2.c3p0.impl.level=ALL
 #com.mchange.v2.c3p0.impl.C3P0PooledConnectionPool.level=ALL
-#com.mchange.v2.c3p0.debug.level=ALL
+com.mchange.v2.c3p0.debug.level=ALL
 
 #com.mchange.v2.c3p0.impl.NewProxyPreparedStatement.level=ALL
 #com.mchange.v2.c3p0.impl.NewProxyStatement.level=ALL
