@@ -1,3 +1,7 @@
+	-- For reasons that remain obscure, the published build of c3p0-0.9.5-pre2 is missing
+	   JDBC4 methods (many thanks to edysli on github for pointing this out). Apparently
+	   it was accidentally built against JDBC3 libraries. Added a compile-time check 
+	   for JDBC4 api in generated code to C3P0ImplUtils.
 	-- Divided ComboPooledDataSource into final implementation class and an abstract class
 	   which can be extended to derive debugging filters. Created two such filters,
 	   com.mchange.v2.c3p0.debug.AfterCloseLoggingComboPooledDataSource and 
